--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     
     <!-- JavaScript -->
     <script type="text/javascript" src="static/js/choropleth.js"></script>
-    <script type="text/javascript" src="static/js/logic.js"></script>
+    <script type="text/javascript" src="static/js/logicv2.js"></script>
 
 </body>
 </html>
