--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <!-- Leaflet CSS-->
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <style>
-        #map { height: 600px; }
+        #map {
+      height: 600px; /* Adjust the height as needed */
+      width: 100%;
+    }
     </style>
 
     <!-- Our CSS -->
@@ -30,8 +33,10 @@
     <div id="map"></div>
     
     <!-- JavaScript -->
-    <script type="text/javascript" src="static/js/choropleth.js"></script>
+    <!-- <script type="text/javascript" src="static/js/choropleth.js"></script> -->
     <script type="text/javascript" src="static/js/logic.js"></script>
+    <!-- <script type="text/javascript" src="static/js/logicv2.js"></script> -->
 
 </body>
 </html>
+
