updated js and geojson

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     
     <!-- JavaScript -->
     <!-- <script type="text/javascript" src="static/js/choropleth.js"></script> -->
-    <script type="text/javascript" src="static/js/logic.js"></script>
-    <!-- <script type="text/javascript" src="static/js/logicv2.js"></script> -->
+    <!-- <script type="text/javascript" src="static/js/logic.js"></script> -->
+    <script type="text/javascript" src="static/js/logicv2.js"></script>
 
 </body>
 </html>
