added new geojson and logic files

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <!-- JavaScript -->
     <!-- <script type="text/javascript" src="static/js/choropleth.js"></script> -->
     <!-- <script type="text/javascript" src="static/js/logic.js"></script> -->
-    <script type="text/javascript" src="static/js/logicv2.js"></script>
+    <!-- <script type="text/javascript" src="static/js/logicv2.js"></script> -->
+    <script type="text/javascript" src="static/js/logicv3.js"></script>
 
 </body>
 </html>
