update logic files

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <body>
     <!-- Add dropdown -->
-    <label for="yearSelect">Select Year:</label>
+    <label for="yearSelect">Show Population Density for Year:</label>
     <select id="yearSelect">
       <option value="1962">1962</option>
       <option value="1977">1977</option>
