--- a/index2.html
+++ b/index2.html
@@ -14,7 +14,7 @@
 <body>
     <!-- Header section with a title -->
     <header>
-        <h1>Net Migration and Population Density Visualization</h1>
+        <h1>Net Migration and Population Density Dashboard</h1>
     </header>
     <div id="universal-country-key">
         <h2>Universal Country Key</h2>
