--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
 
 <body>
     <!-- Add dropdown -->
-    <label for="yearSelect">Select Year:</label>
+    <label for="yearSelect">Show Population Density for Year:</label>
     <select id="yearSelect">
-      <option value="1962">1962</option>
-      <option value="1977">1977</option>
-      <option value="1987">1987</option>
-      <option value="1997">1997</option>
-      <option value="2007">2007</option>
       <option value="2017">2017</option>
+      <option value="2007">2007</option>
+      <option value="1997">1997</option>
+      <option value="1987">1987</option>
+      <option value="1977">1977</option>
+      <option value="1962">1962</option>   
     </select>
 
     <!-- The div that holds the map -->
@@ -66,10 +66,8 @@
     <!-- <script type="text/javascript" src="static/js/choropleth.js"></script> -->
     <!-- <script type="text/javascript" src="static/js/logic.js"></script> --> 
     <!-- <script type="text/javascript" src="static/js/logicv2.js"></script> -->
-    <script type="text/javascript" src="static/js/logicv3.js"></script> 
-    <!-- <script type="text/javascript" src="static/js/logicv4.js"></script> --> 
+    <script type="text/javascript"= src="static/js/logicv3a.js"></script>
+    <!-- <script type="text/javascript" src="static/js/logicv4.js"></script> -->
 
 </body>
 </html>
-
-
