make final edits

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     <!-- <script type="text/javascript" src="static/js/choropleth.js"></script> -->
     <!-- <script type="text/javascript" src="static/js/logic.js"></script>  -->
     <!-- <script type="text/javascript" src="static/js/logicv2.js"></script> -->
-    <!-- <script type="text/javascript" src="static/js/logicv3a.js"></script> -->
-    <script type="text/javascript" src="static/js/logicv4.js"></script>
+    <script type="text/javascript" src="static/js/logicv3a.js"></script>
+    <!-- <script type="text/javascript" src="static/js/logicv4.js"></script> -->
 
 </body>
 </html>
